--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.yanzhenjie.recyclerview:x:1.3.2'
     implementation 'com.github.clans:fab:1.6.4'
+    implementation 'com.google.android.material:material:1.0.0-rc01'
 }
