--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,6 @@ dependencies {
     implementation 'com.yanzhenjie.recyclerview:x:1.3.2'
     implementation 'com.github.clans:fab:1.6.4'
     implementation 'com.google.android.material:material:1.0.0-rc01'
+    implementation 'com.github.takusemba:spotlight:1.8.0'
+
 }
