--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,9 +27,11 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation 'com.yanzhenjie.recyclerview:x:1.3.2'
-    implementation 'com.github.clans:fab:1.6.4'
     implementation 'com.google.android.material:material:1.0.0-rc01'
     implementation 'com.github.takusemba:spotlight:1.8.0'
+    implementation 'com.diegodobelo.expandingview:expanding-view:0.9.4'
+    implementation "dev.sasikanth:colorsheet:1.0.1"
+
+
 
 }
