--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0-rc01'
     implementation 'com.github.takusemba:spotlight:1.8.0'
     implementation 'com.diegodobelo.expandingview:expanding-view:0.9.4'
-    implementation "dev.sasikanth:colorsheet:1.0.1"
+    implementation 'petrov.kristiyan:colorpicker-library:1.1.10'
 
 
 
